# cocoOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug.mk  docker-compose.yml  makefile  temp_notes.md
.github/workflows/: main.yml
cmake/: make_test.cmake
cocoOS/os_event/: CMakeLists.txt
cocoOS/os_kernel/: CMakeLists.txt
cocoOS/os_msgqueue/: CMakeLists.txt
cocoOS/os_sem/: CMakeLists.txt
cocoOS/os_task/: CMakeLists.txt
cocoOS/os_task/include/: os_task.h
cocoOS/os_utils/: CMakeLists.txt
documents/: definitions.csv  requirements.csv  test_cases.csv  test_cases.md
inc/: CMakeLists.txt  os_event.h  os_port.h  os_sem.h
os/: CMakeLists.txt
os/cocoos/: cocoos_public.h
os/cocoos/include/: cocoos_public.h
os/cocoos/src/: cocoos_public.c
os/os_event/: CMakeLists.txt
os/os_event/include/: os_event.h
os/os_event/mocks/: CMakeLists.txt
os/os_event/mocks/src/: mock_os_event.c
os/os_event/src/: os_event.c
os/os_kernel/: CMakeLists.txt
os/os_kernel/include/: cocoos.h  os_applAPI.h  os_kernel.h  os_port.h  os_reentry.h
os/os_kernel/mocks/: CMakeLists.txt
os/os_kernel/mocks/src/: mock_os_kernel.c
os/os_kernel/src/: os_cbk.c  os_kernel.c
os/os_msgqueue/: CMakeLists.txt
os/os_msgqueue/include/: os_msgqueue.h
os/os_msgqueue/mocks/: CMakeLists.txt
os/os_msgqueue/mocks/src/: mock_os_msgqueue.c
os/os_msgqueue/src/: os_msgqueue.c
os/os_sem/: CMakeLists.txt
os/os_sem/include/: os_sem.h
os/os_sem/mocks/: CMakeLists.txt
os/os_sem/mocks/src/: mock_os_sem.c
os/os_sem/src/: os_sem.c
os/os_task/: CMakeLists.txt
os/os_task/include/: os_task.h  os_typedef.h
os/os_task/mocks/: CMakeLists.txt
os/os_task/mocks/src/: mock_os_task.c
os/os_task/src/: os_task.c
os/os_utils/: CMakeLists.txt
os/os_utils/include/: os_assert.h  os_defines.h
os/os_utils/mocks/: CMakeLists.txt
os/os_utils/mocks/src/: mock_os_assert.c
os/os_utils/src/: os_assert.c  os_cbk.c
scripts/: test.py  trace_reqs.py
src/: CMakeLists.txt  os_kernel.c  os_task.c
test/: CMakeLists.txt  CMakePresets.json  makefile
test/src/: main.cpp
tests/: CMakeLists.txt  tests.json
tests/include/: test_macros.hpp
tests/mocks/: CMakeLists.txt
tests/mocks/include/: mocks.hpp
tests/mocks/src/: task_mocks.cpp
tests/os_event/: CMakeLists.txt
tests/os_event/src/: os_event.test.cpp
tests/os_kernel/: CMakeLists.txt
tests/os_kernel/src/: os_kernel.test.cpp
tests/os_msgqueue/: CMakeLists.txt
tests/os_msgqueue/src/: os_msgqueue.test.cpp
tests/os_sem/: CMakeLists.txt
tests/os_sem/src/: os_sem.test.cpp
tests/os_task/: CMakeLists.txt
tests/os_task/config1/: user_os_config.h
tests/os_task/include/: user_os_config.h
tests/os_task/src/: os_task.test.cpp  os_task.test0.cpp  os_task.test1.cpp
tests/src/: main.cpp  os_task.test.cpp
tests/user_config/: user_os_config.h
